@startuml class1

class Line
{
    - Position[] positions
    + put()
    + get()
    + toString()
    + toArray()
}

class Position
{
    - Linable linable
    + setLinable()
}

interface Linable
{
    + setPosition()
    + getPosition()
    + getValue()
}

Line "1" <--+ "n" Position
Position "1" *-- "1" Linable

class BubbleSorter
{
    - int[] a
    - String plan
    - swap()
}

interface Sorter
{
    + load()
    + sort()
    + getPlan()
}

BubbleSorter <|--Sorter

enum Gourd
{
    ONE
    TWO
    THREE
    FOUR
    FIVE
    SIX
    SEVEN
    - int r
    - int g
    - int b
    - Position position
    + getGourdByRank()
    + rank()
    + toString()
    + swapPosition()
}

Gourd <|-- Linable

class Geezer
{
    - Geezer theGeezer
    - Sorter sorter
    + getTheGeezer()
    + setSorter()
    + lineup()
    - parsePlan()
    - execute()
}

Geezer "1" *-- "1" Sorter

@enduml